--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -23,6 +23,10 @@
     font-family: "Inter", sans-serif;
 }
 
+.leaflet-control-attribution.leaflet-control{
+    font-size: 0px;
+
+}
 body {
     height: 100vh;
     display: flex;
@@ -78,12 +82,13 @@ i{
     gap: 0.5rem;
     cursor: pointer;
     margin-left: auto;
+    margin-right: 20px;
 }
 
 .profile-info {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .profile-name {
@@ -134,6 +139,7 @@ i{
     flex-direction: column;
     align-items: center;
     margin-bottom: 15px;
+    margin-top: 15px;
     cursor: pointer;
 }
 
@@ -210,7 +216,7 @@ i{
     background-color: var(--search-background);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    border-radius: 6px;
+    border-radius: 12px;
     padding: 0.5rem;
 }
 
