--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -332,7 +332,7 @@ i{
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
