--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -1,24 +1,63 @@
+/* Estilos para el contenedor del mapa */
+#map {
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto; /* Permite hacer scroll */
+    
+    padding: 1px;
+    border-radius: 8px;
+    background-color: #26252a;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Tabla estilizada */
 .sightings-table {
     width: 100%;
     border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 18px;
-    text-align: left;
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    border-radius: 8px;
+    margin-bottom: 20px;
 }
 
-.sightings-table th, .sightings-table td {
-    padding: 12px 15px;
-    border: 1px solid #ddd;
-}
-
+/* Cabecera de la tabla */
 .sightings-table th {
-    background-color: #f4f4f4;
+    background-color: #00bcd4;
+    color: white;
+    padding: 12px 15px;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
+/* Estilos para las celdas */
+.sightings-table td {
+    padding: 12px 15px;
+    border: 1px solid #3d3d3d;
+    color: #333;
+    text-align: center;
+}
+
+/* Filas alternadas de la tabla */
 .sightings-table tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
+.sightings-table tr:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+/* Efecto de hover para filas */
 .sightings-table tr:hover {
     background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+.sidebar-item.active {
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    padding: 6px 4px;
 }
