--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -25,7 +25,7 @@
 }
 
 .sightings-table thead th {
-    background-color: #1D4C54;
+    background-color: #1c7b8b;
     padding: 12px 25px;
     white-space: nowrap;
     border-bottom: 1px solid #3d3d3d;
