--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -152,11 +152,13 @@ h2 {
     opacity: 0;
     transform: translate(-50%, -55%);
   }
+
   to {
     opacity: 1;
     transform: translate(-50%, -50%);
   }
 }
+
 .modal-content {
   position: relative;
 }
@@ -182,7 +184,8 @@ h2 {
   display: block;
   margin: 10px 21px;
   padding: 10px;
-  width: 40%; /* Ajusta el ancho según sea necesario */
+  width: 40%;
+  /* Ajusta el ancho según sea necesario */
   border: 1px solid #00BCD4;
   border-radius: 4px;
   background-color: #1e1e24;
@@ -192,5 +195,33 @@ h2 {
 
 .map-container {
   background: black;
+
 }
 
+.next-page {
+  background-color: transparent;
+  color: #00bcd4;
+  border: 1px solid #00bcd4;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.prev-page {
+  background-color: transparent;
+  color: #00bcd4;
+  border: 1px solid #00bcd4;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.pagination-controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
